# Lux

./: .gitignore  CMakeLists.txt  compile_commands.json
assets/: manifest.json
assets/document/: application.xml  index.xml
assets/i18n/: en_US.json  zh_CN.json
assets/tile/: grass.json
design/: Lux Object System.md
projects/: CMakeLists.txt
projects/demo/: CMakeLists.txt
projects/demo/include/: Application.hpp
projects/demo/src/: Application.cpp  main.cpp
script/: .gitignore  console.js  demo.js  main.js  native.d.ts  package.json  require.js  runtime.d.ts  tsconfig.json
script/base/: require.js
script/engine/: GameMain.js  index.js
script/engine/element/: Element_Base.js  Element_Sprite.js  index.js
script/engine/scene/: Scene_Base.js  Scene_Main.js  index.js
script/runtime/: event.js
script/src/: GameMain.ts  index.ts  main.ts
script/src/base/: Base.ts
script/src/map/: Map_Tile.ts
script/src/scene/: Scene_Base.ts  Scene_Main.ts  index.ts
script/src/system/: System_Camera.ts  System_Main.ts  System_Map.ts  index.ts
src/: main.cpp  util.hpp
src/core/: Container.hpp  Context.hpp  Defer.hpp  Dependence.hpp  EventBus.hpp  EventEmitter.hpp  Object.hpp  Value.hpp
src/element/: Container.hpp  ContainerElement.hpp  Element.hpp  Font.hpp  FontElement.hpp  Image.hpp  ImageElement.hpp  Root.hpp  RootElement.hpp  Sprite.hpp  SpriteElement.hpp  Text.hpp  TextElement.hpp
src/event/: KeyEvent.hpp  MainloopEvent.hpp  MouseButtonEvent.hpp  MouseMoveEvent.hpp  RenderEvent.hpp  SDLEvent.hpp
src/game/: Background.hpp  Block.hpp  Charactor.hpp  Entity.hpp  EntityPool.hpp  Item.hpp  Main.hpp  Map.hpp  Object.hpp
src/game/map/: Chunk.hpp
src/graphic/: Container.hpp  Image.hpp  Sprite.hpp  Tile.hpp  TileGroup.hpp
src/resource/: Buffer.hpp  Font.hpp  Image.hpp  Sprite.hpp
src/runtime/: Font.hpp  Native.hpp  Sprite.hpp  util.hpp
src/script/: Array.hpp  Engine.hpp  Object.hpp  SimpleValue.hpp  Undefined.hpp  Value.hpp
src/system/: Application.hpp  Camera.hpp  Document.hpp  EventBus.hpp  Graphic.hpp  Input.hpp  Native.hpp  Resource.hpp  Script.hpp
src/system/event/: MainloopEvent.hpp
src/system/interface/: ICamera.hpp  IComponent.hpp  IDocument.hpp  IGraphic.hpp  IInput.hpp  INative.hpp  IResource.hpp  IScript.hpp
templates/: CMakeLists.txt
tools/: strings.cmake
